chore: rename bare to blueprint
