# docs/.gitbook/assets/openapi.yaml
@@ -265,7 +265,7 @@ components:
             $ref: '#/components/schemas/DataPolicy_Principal'
           type: array
       type: object
-    GetBarePolicyResponse:
+    GetBlueprintPolicyResponse:
       properties:
         dataPolicy:
           $ref: '#/components/schemas/DataPolicy'
@@ -278,7 +278,7 @@ components:
     GlobalTransform:
       description: "If the specified transform is incompatible with the field data\
         \ type to which this global transform is connected with,\n then the end user\
-        \ will get an invalid argument, and the bare policy with the global transforms\
+        \ will get an invalid argument, and the blueprint policy with the global transforms\
         \ applied won't be returned."
       properties:
         description:
@@ -493,13 +493,13 @@ paths:
       summary: ListCatalogs
       tags:
       - DataCatalogsService
-  /catalogs/{catalogId}/bare-policy:
+  /catalogs/{catalogId}/blueprint-policy:
     get:
       description: "Returns a data policy without any rule sets, based on the given\
-        \ table's data structure in the catalog.\n Extend this bare policy with field\
+        \ table's data structure in the catalog.\n Extend this blueprint policy with field\
         \ transforms and/or rule sets to create a complete data policy.\n Use the\
         \ UpsertDataPolicy endpoint to save and enforce the policy."
-      operationId: DataCatalogsService_GetBarePolicy
+      operationId: DataCatalogsService_GetBlueprintPolicy
       parameters:
       - in: path
         name: catalogId
@@ -523,7 +523,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetBarePolicyResponse'
+                $ref: '#/components/schemas/GetBlueprintPolicyResponse'
           description: OK
         default:
           content:
@@ -531,7 +531,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Status'
           description: Default error response
-      summary: GetBarePolicy
+      summary: GetBlueprintPolicy
       tags:
       - DataCatalogsService
   /catalogs/{catalogId}/databases:
@@ -797,13 +797,13 @@ paths:
       summary: ListTables
       tags:
       - ProcessingPlatformsService
-  /processing-platforms/{platformId}/tables/{tableId}/bare-policy:
+  /processing-platforms/{platformId}/tables/{tableId}/blueprint-policy:
     get:
       description: "Returns a data policy without any rule sets, based on the given\
-        \ table's data structure in the platform.\n Extend this bare policy with field\
+        \ table's data structure in the platform.\n Extend this blueprint policy with field\
         \ transforms and/or rule sets to create a complete data policy.\n Use the\
         \ UpsertDataPolicy endpoint to save and enforce the policy."
-      operationId: ProcessingPlatformsService_GetBarePolicy
+      operationId: ProcessingPlatformsService_GetBlueprintPolicy
       parameters:
       - in: path
         name: platformId
@@ -820,7 +820,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetBarePolicyResponse'
+                $ref: '#/components/schemas/GetBlueprintPolicyResponse'
           description: OK
         default:
           content:
@@ -828,7 +828,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Status'
           description: Default error response
-      summary: GetBarePolicy
+      summary: GetBlueprintPolicy
       tags:
       - ProcessingPlatformsService
 tags:
